[package]
name = "cnsl"
description = "A crate that provides methods and macros for interacting with the command line."
version = "0.1.1"
edition = "2021"
keywords = ["console", "stdout", "stderr", "stdin", "cli"]
categories = ["accesibility", "command-line-interface", "command-line-utilities"]
repository = "https://www.github.com/imajindevon/cnsl/"
license = "WTFPL"
authors = ["ImajinDevon"]
readme = "README.md"
rust-version = "1.60.0"
documentation = "https://docs.rs/cnsl/"

[dependencies]
